--- a/angular1/src/index.html
+++ b/angular1/src/index.html
@@ -10,4 +10,8 @@
 <body>
   <app-root></app-root>
 </body>
+<link rel="stylesheet"
+ href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+crossorigin="anonymous">
 </html>
